--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Alexandre Xavier, Nicholas Araújo",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "erede-node": "^1.0.11",
     "express": "^4.17.1",
     "mongodb": "^3.6.3"
   },
