refactor!: moved files according to project structure in the docs

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node ./src/index.js",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
-    "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:unit": "jest tests/unit --watch",
-    "test:integration": "jest tests/integration --watch",
-    "test:ci": "npm test -- --coverage"
+    "test:verbose": "jest --passWithNoTests --runInBand --passWithNoTests",
+    "test:unit": "jest tests/unit --watch --passWithNoTests",
+    "test:integration": "jest tests/integration --watch --passWithNoTests",
+    "test:ci": "npm test -- --coverage --passWithNoTests"
   },
   "author": "Alexandre Xavier, Nicholas Araújo",
   "license": "MIT",
