--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Alexandre Xavier, Nicholas Araújo",
   "license": "MIT",
   "dependencies": {
+    "argon2": "^0.27.0",
     "dotenv": "^8.2.0",
     "erede-node": "^1.0.11",
     "express": "^4.17.1",
