--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "erede-node": "^1.0.11",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3"
   },
   "devDependencies": {
