--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "erede-node": "^1.0.11",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
