--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
     "@shelf/jest-mongodb": "^1.2.3",
+    "@types/jest": "^26.0.15",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3"
   }
 }
