--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "jest tests/unit --watch --passWithNoTests",
     "test:integration": "jest tests/integration --watch --passWithNoTests",
-    "test:ci": "npm test -- --coverage --passWithNoTests"
+    "test:ci": "npm test -- --coverage --passWithNoTests",
+    "test-cov": "jest --coverage",
+    "coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "author": "Alexandre Xavier, Nicholas Araújo",
   "license": "MIT",
@@ -27,10 +29,10 @@
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/jest": "^26.0.15",
     "babel-eslint": "^10.1.0",
+    "coveralls": "^3.1.0",
     "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.3",
     "git-commit-msg-linter": "^3.0.0",
-    "husky": "^4.3.0",
     "jest": "^26.6.3"
   }
 }
