--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "QRoBuy-backend",
   "version": "0.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/application/api/start.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start:dev": "nodemon src/application/api/start.js",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "jest tests/unit --watch --passWithNoTests",
@@ -16,6 +16,7 @@
   "author": "Alexandre Xavier, Nicholas Araújo",
   "license": "MIT",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "argon2": "^0.27.0",
     "dotenv": "^8.2.0",
     "erede-node": "^1.0.11",
@@ -33,6 +34,8 @@
     "eslint": "^7.13.0",
     "eslint-plugin-jest": "^24.1.3",
     "git-commit-msg-linter": "^3.0.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
+    "sucrase": "^3.16.0"
   }
 }
