--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.12.1",
     "argon2": "^0.27.0",
+    "aws-sdk": "^2.797.0",
     "dotenv": "^8.2.0",
     "erede-node": "^1.0.11",
     "express": "^4.17.1",
