--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
+    "qrcode": "^1.4.4",
     "validator": "^13.1.17"
   },
   "devDependencies": {
