feat: changed mongo-memory-server to 4.2.3 version

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/application/api/start.js",
   "scripts": {
     "start:dev": "nodemon src/application/api/start.js",
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
-    "test:verbose": "jest --passWithNoTests --watch --runInBand",
+    "test": "jest --passWithNoTests --noStackTrace --runInBand",
+    "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "jest tests/unit --watch --passWithNoTests --runInBand",
     "test:integration": "jest tests/integration --watch --passWithNoTests --passWithNoTests",
     "test:ci": "npm test -- --coverage --passWithNoTests",
