--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "src/application/api/start.js",
   "scripts": {
-    "start:dev": "nodemon src/application/api/start.js",
+    "transpile": "babel ./src --out-dir build",
+    "clean": "rimraf build",
+    "build": "npm-run-all clean transpile",
+    "start": "node ./build/application/rest-api/start.js",
+    "start:dev": "nodemon src/application/rest-api/start.js",
     "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "jest tests/unit --watch --passWithNoTests --runInBand",
@@ -28,7 +32,9 @@
     "validator": "^13.1.17"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.12.1",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/jest": "^26.0.15",
     "babel-eslint": "^10.1.0",
@@ -38,6 +44,8 @@
     "git-commit-msg-linter": "^3.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "sucrase": "^3.16.0",
     "supertest": "^6.0.1"
   }
