--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ branches:
   only:
   - main
 before_install:
-    - ./scripts/ecr_credentials.sh
+    - ./ecr_credentials.sh
 install: npm install
 cache:
   directories:
