feat: added force executable erc credentials

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ branches:
   only:
   - main
 before_install:
-    - ./ecr_credentials.sh
+    - chmod -x ./ecr_credentials.sh && bash ./ecr_credentials.sh
 install: npm install
 cache:
   directories:
