chore: changed start file path

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "QRoBuy-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/application/api/start.js",
+  "main": "src/application/rest-api/start.js",
   "scripts": {
     "transpile": "babel ./src --out-dir build",
     "clean": "rimraf build",
     "build": "npm-run-all clean transpile",
-    "start": "node ./build/application/rest-api/start.js",
+    "start": "node build/application/rest-api/start.js",
     "start:dev": "nodemon src/application/rest-api/start.js",
     "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
