--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.12.7",
     "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
     "argon2": "^0.27.0",
     "aws-sdk": "^2.797.0",
     "dotenv": "^8.2.0",
@@ -32,6 +32,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "qrcode": "^1.4.4",
+    "swagger-jsdoc": "^5.0.1",
+    "swagger-ui-express": "^4.1.5",
     "validator": "^13.1.17"
   },
   "devDependencies": {
