--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "jest tests/unit --watch --passWithNoTests --runInBand",
     "test:integration": "jest tests/integration --watch --passWithNoTests --passWithNoTests",
-    "test:ci": "npm test -- --coverage --passWithNoTests",
-    "test:cov": "jest --coverage --passWithNoTests --runInBand",
-    "coverage": "jest --coverage && cat ./coverage/lcov.info | coveralls"
+    "test:ci": "npm test -- --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "author": "Alexandre Xavier, Nicholas Araújo",
   "license": "MIT",
