--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install: npm install
 cache:
   directories:
     - node_modules
-script: npm run test:verbose
+script: npm run test:ci
 after_success:
   - npm run coverage
   - bash <(curl -s https://codecov.io/bash)
